Add unit test and CI for tests

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,2 +1,6 @@
 bin_PROGRAMS = main
 main_SOURCES = main.cpp
+
+TESTS = tests/test_main
+noinst_PROGRAMS = $(TESTS)
+tests_test_main_SOURCES = tests/test_main.cpp
